--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ipaenablers.ipa" android:versionName="1.1.1" android:installLocation="auto" android:versionCode="13">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ipaenablers.ipa" android:versionName="1.2.3" android:installLocation="auto" android:versionCode="17">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="23" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -9,5 +9,5 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 	<permission android:name="com.Ipa.permission.C2D_MESSAGE" android:protectionLevel="signature" />
-	<application android:label="IPA" android:icon="@drawable/ic_launcher" android:theme="@style/MyTheme"></application>
+	<application android:label="Impact" android:icon="@drawable/ic_launcher" android:theme="@style/MyTheme"></application>
 </manifest>
